# rust-practice

./: Cargo.toml
src/: fruit_basket.rs  indexing_tuple.rs  iter.rs  main.rs  read_file_content.rs  safe_division.rs
