[package]
name = "hello-cargo"
version = "0.1.0"
authors = ["tamanobi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g

[profile.release]
opt-level = 3
debug = false
